--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "react-dashboard-lib",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-grid-layout": "^0.16.6"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -c .storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +25,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "3.1.1",
+    "@storybook/react": "^5.2.0",
+    "babel-cli": "^6.26.0"
+  },
+  "peerDependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
   }
 }
