--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "react-dashboard-lib",
   "version": "0.1.0",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prakash1998/react-dashboard.git"
+  },
   "dependencies": {
     "react-grid-layout": "^0.16.6"
   },
@@ -33,6 +43,6 @@
   },
   "peerDependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.9.0"
   }
 }
