--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-    "presets": [
-        [
-            "react-app",
-            {
-                "absoluteRuntime": false
-            }
-        ]
-    ]
+    "presets": ["@babel/preset-react"]
 }
