--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,42 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended",
-    "plugin:jest/recommended",
-    "eslint-config-prettier"
-  ],
-  "plugins": ["react", "react-hooks" , "jest", "prettier"],
-  "env": {
-    "browser": true,
-    "jasmine": true,
-    "jest": true
-  },
-  "rules": {
-    "prettier/prettier": ["error", { "singleQuote": true }]
-  },
-  "settings": {
-    "react": {
-      "pragma": "React",
-      "version": "detect"
-    }
-  },
-  "parser": "@typescript-eslint/parser"
+    "env": {
+        "browser": true,
+        "es6": true
+    },
+    "extends": "eslint:recommended",
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "react/prop-types": "off",
+        "no-console": "off",
+        "react/jsx-uses-react": 1,
+        "react/jsx-uses-vars": 1,
+        "react/jsx-indent": "off",
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "no-unused-vars": [
+          "error",
+          {
+            "varsIgnorePattern": "React|jsx|css|^_",
+            "argsIgnorePattern": "^_",
+            "caughtErrors": "none"
+          }
+        ]
+      }
 }
