--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "react-dashboard-lib",
-  "version": "0.1.3",
+  "version": "0.1.7",
+  "description": "dashboard with flexible layout of widgets",
+  "author": "Parkash Dudhat",
+  "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -12,6 +15,7 @@
     "url": "https://github.com/prakash1998/react-dashboard.git"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react-grid-layout": "^0.16.6"
   },
   "scripts": {
@@ -20,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -c .storybook",
-    "build-and-publish":"npm run-script build & npm publish"
+    "build-and-publish": "npm run-script build & npm publish"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,10 +34,13 @@
     "@babel/core": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@storybook/react": "^5.2.0",
+    "antd": "^3.23.3",
     "babel-jest": "^24.9.0",
+    "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
