--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dashboard-lib",
-  "version": "0.1.7",
+  "version": "0.1.9",
   "description": "dashboard with flexible layout of widgets",
   "author": "Parkash Dudhat",
   "license": "MIT",
@@ -44,7 +44,7 @@
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.1.1",
     "regenerator-runtime": "^0.13.3"
   },
   "peerDependencies": {
